[gd_scene load_steps=9 format=2]

[ext_resource path="res://Images/Sample/Tutorial/Rat.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Enemy.gd" type="Script" id=2]
[ext_resource path="res://Scenes/EnemyStats.gd" type="Script" id=3]
[ext_resource path="res://Scenes/EnemyWeaponStats.gd" type="Script" id=4]

[sub_resource type="Animation" id=1]
resource_name = "Attack"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -3 ), Vector2( 0, 9 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "dealDamage"
} ]
}

[sub_resource type="Animation" id=2]
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -1, 3 ), Vector2( 3, -1 ), Vector2( -3, -1 ), Vector2( 1, 2 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "EnemyLoseHp"
length = 1.05
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("EnemyHpLost:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6, 0.75, 0.9, 1.05 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 4, -21 ), Vector2( 5, -23 ), Vector2( 7, -24 ), Vector2( 8, -26 ), Vector2( 10, -27 ), Vector2( 11, -29 ), Vector2( 13, -30 ), Vector2( 14, -32 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "PlayerLoseHp"
length = 1.05
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerHpLost:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6, 0.75, 0.9, 1.05 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -40, 7 ), Vector2( -40, 4 ), Vector2( -40, 1 ), Vector2( -40, -3 ), Vector2( -40, -7 ), Vector2( -40, -11 ), Vector2( -40, -13 ), Vector2( -40, -14 ) ]
}

[node name="Enemy" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="HPLabel" type="Label" parent="."]
margin_left = -35.0
margin_top = -27.0
margin_right = 35.0
margin_bottom = -13.0
rect_min_size = Vector2( 32, 14 )
text = "HP20"
align = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="NameLabel" type="Label" parent="."]
margin_left = -17.0
margin_top = -34.0
margin_right = 17.0
margin_bottom = -22.0
text = "Rat"
align = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 1 )
anims/Shake = SubResource( 2 )

[node name="StatsAnimations" type="AnimationPlayer" parent="."]
anims/EnemyLoseHp = SubResource( 3 )
anims/PlayerLoseHp = SubResource( 4 )

[node name="EnemyStats" type="Node" parent="."]
script = ExtResource( 3 )

[node name="EnemyWeaponStats" type="Node" parent="."]
script = ExtResource( 4 )

[node name="EnemyHpLost" type="Label" parent="."]
margin_left = 4.0
margin_top = -21.0
margin_right = 22.0
margin_bottom = -9.0
rect_min_size = Vector2( 18, 12 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerHpLost" type="Label" parent="."]
margin_left = -40.0
margin_top = -3.0
margin_right = -22.0
margin_bottom = 9.0
rect_min_size = Vector2( 18, 12 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
